CSS/projects.css
h3 {
  margin:0;
}
  .projects .loader__ball {
    background: white;
    border:1px solid rgba(255, 255, 255, 0.8);
  }

.vertical-nav {

  width: 25%;
  background-color: #414a58;
  position: fixed;
  height: 100%;
  overflow: auto;
  right:0;
  min-width: 300px;
}

.vertical-nav >* {color: white;}


.projectIcon {
  width: 50px;
  height: 50px;
  padding: 10px;
  border: none;
  opacity: 1;
  background: white;
  border: 1px solid rgb(100, 100, 100);
  border-radius: 100%;
  z-index: 1;
  cursor: pointer;
  transition: 0.3s;
  position: fixed;
}

.projectIcon:hover {
  background: rgb(161, 161, 161);
}

.projectIcon.projectClose:hover {
  background: #ef6462;
}

.projectIcon.right {
  transform: rotate(-90deg);
  right:0;
}

.projectIcon.right:hover {
  background: #3af3ab;
}

.projectIcon.left {
  transform: rotate(90deg);
  right:65px;
}

.projectIcon.left:hover {
  background: #69D2E7;
}


.project-icons {
  float:left;
  width: 75px;
  padding: 15px;
}

.project-icons-wrapper {
/*  margin-right: 90px;
*/}

.project-icons-wrapper h2 {
clear: none;
padding-top: 20px;
margin-right: 100px;
}

.project-title {
  font-size: 34px;
  margin-bottom: -15px;
  line-height: 1.3;
  font-weight: 700;
  text-align: center;
  padding: 30px 0;
  font-family: 'Lato', sans-serif;
  background: white;
  color:rgb(59, 59, 59);
}

.dark-mode .project-title {
  background: #1f1f20;
  color: white !important;
  transition:3s;
}


#darkModeSwitchProject {
  width: 176px;
  margin: 0 auto;
}

#darkModeSwitchProject #moonIcon {
  bottom: 18px;
  left: 6px;
}

.project-date {
  text-align: center;
  transition:3s;
  padding-top:25px;
}
.project-skills {
  padding: inherit;
  left: 50%;
  position: relative;
  margin-left: -130px;

}

.project-skills li{
  font-family: 'Lato', sans-serif;
  margin-left:30px;
  font-weight: 500;
}

.project-content {
  margin-right:25%;
}

.project-content img {
  display: block;
}

.project-content .bottom-nav {
  width: 99.5%;
}

.project-content p.body {
  clear: both;
}

.project-details {
  font-family: 'Lato', sans-serif;
  font-size: 18px;
}

.vertical-nav hr {
  margin: 10px 0;
  border-bottom: 1px solid white;
}

.dark-mode .vertical-nav hr {
  margin: 10px 0;
  border-bottom: 1px solid #1f1f20;
}


.projectImgHalf {
  width: 45%;
  padding: 2.5%;
  margin: 0;
  float: left;
}

.projectImgFull {
  width: 90%;
  padding: 0 5%;
  display: block;
}

.project-test {
  position: absolute;
  width: 71%;
  float:left;
}

.lilypad-button {
  border: 1px solid #30f2bc;
}

.lilypad-button:before {
  background: #30f2bc;
}

.awa-button {
  border: 1px solid #4eefe5;
}

.awa-button:before {
  background: #4eefe5;
}

.oneof-button {
  border: 1px solid #fec156;
}

.oneof-button:before {
  background: #fec156;
}

.sh-button {
  border: 1px solid #7fbce2;
}

.sh-button:before {
  background: #7fbce2;
}

.slingshot-button {
  border: 1px solid #bbd85e;
}

.slingshot-button:before {
  background: #bbd85e;
}

.shyft-button {
  border: 1px solid #f79f5a;
}

.shyft-button:before {
  background: #f79f5a;
}


@media only screen and (max-width: 1200px) {

      .project-content {
        margin-right:300px;
      }

@media only screen and (max-width: 985px) {

      .projectImgHalf {
        width: 90%;
        padding: 5%;
        margin: 0;
      }

      .vertical-nav p:not(.project-title), .project-skills li {
        font-size:16px;
      }
}

@media only screen and (max-width: 750px) {

  .vertical-nav {
    width: 100%;
    position: relative;
  }

  .project-content .container {
  max-width: unset;
}

  .project-content {
    margin: 0;
  }

  .project-test, .project-test figure.testimonials figcaption {
    width: 100%;
  }

  #menu-icon {
    top: 0;
    left: 60px;
  }

  .chatIcon:not(#menu-icon) {
    right: 50%;
    margin-right: -20px;
    left: initial;
    bottom:unset;
    top:0;
  }
}

